# apple-tv-controller

./: .gitignore  README.md  apple_tv_power.py  apps.json  index.html  pyproject.toml  scenarios.json  schedule.json
apple_tv/: __init__.py  __main__.py  apps.py  cli.py  config.py  connection.py  constants.py  controls.py  exceptions.py  interactive.py  models.py  scenarios.py  scheduler.py  server.py
apple_tv/cli/: __init__.py  __main__.py  console.py  constants.py  operations.py  utils.py
apple_tv/cli/commands/: __init__.py  config.py  control.py  help.py  scenarios.py  server.py
docs/: index.html
tests/: __init__.py  conftest.py  test_config.py  test_models.py
